--- a/styles/globals.css
+++ b/styles/globals.css
@@ -276,6 +276,10 @@ h2 {
   font-size: var(--h2);
 }
 
+small {
+  font-size: var(--small);
+}
+
 a {
   display: inline-block;
   color: inherit;
@@ -343,10 +347,6 @@ button:focus {
 
 .bg-teal-6 {
   background-color: var(--color-teal-6);
-}
-
-.capitalize {
-  text-transform: capitalize;
 }
 
 .gap-6 {
@@ -423,6 +423,10 @@ button:focus {
   text-overflow: ellipsis;
 }
 
+.text-h3 {
+  font-size: var(--h3);
+}
+
 .text-h5 {
   font-size: var(--h5);
 }
@@ -464,6 +468,10 @@ button:focus {
 
   .sm-gap-2 {
     gap: 2vw;
+  }
+
+  .sm-grid-col-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm-my-2 {
