--- a/styles/globals.css
+++ b/styles/globals.css
@@ -166,6 +166,8 @@
   --h4: 1.44rem;
   --h5: 1.2rem;
   --small: 0.833rem;
+  --head: "Viaoda Libre", "Viaoda Libre-fallback", serif;
+  --body: "Nanum Myeongjo", "Nanum Myeongjo-fallback", serif;
 }
 
 @font-face {
@@ -207,10 +209,14 @@ html {
   box-sizing: border-box;
   font-size: 112.5%;
   line-height: 1.5;
-  tab-size: 4;
+  -moz-tab-size: 4;
+    -o-tab-size: 4;
+       tab-size: 4;
   cursor: default;
   background-color: var(--color-teal-2);
-  text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+     -moz-text-size-adjust: 100%;
+          text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
   scrollbar-width: thin;
   scrollbar-color: var(--color-teal-6) var(--color-teal-1);
@@ -224,6 +230,11 @@ html {
   margin: 0;
   border-style: solid;
   border-width: 0;
+}
+
+::-moz-selection {
+  color: var(--color-teal-1);
+  background-color: var(--color-teal-6);
 }
 
 ::selection {
@@ -247,7 +258,7 @@ body {
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
-  font-family: "Nanum Myeongjo", "Nanum Myeongjo-fallback", serif;
+  font-family: var(--body);
   font-weight: 400;
   color: var(--color-teal-6);
   background-color: var(--color-teal-1);
@@ -262,9 +273,8 @@ main {
   display: block;
 }
 
-h1,
-h2 {
-  font-family: "Viaoda Libre", "Viaoda Libre-fallback", serif;
+:is(h1, h2, .font-heading) {
+  font-family: var(--head);
   font-weight: 400;
 }
 
@@ -296,8 +306,10 @@ img {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
   border-style: none;
 }
 
@@ -306,14 +318,9 @@ ul {
 }
 
 button {
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  color: inherit;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
-  cursor: pointer;
   background-color: transparent;
   border: none;
   outline: transparent solid 4px;
@@ -325,85 +332,15 @@ button:focus {
   outline: var(--color-aquamarine-3) solid 4px;
 }
 
-.align-self-center {
-  align-self: center;
+:is(button, details) {
+  cursor: pointer;
 }
 
-.area-1-1 {
-  grid-area: 1/1;
-}
-
-.aspect-1-1 {
-  aspect-ratio: 1/1;
-}
-
-.aspect-9-16 {
-  aspect-ratio: 9/16;
-}
-
-.bb-2 {
-  border-bottom: 2px solid var(--color-teal-6);
-}
-
-.bg-teal-6 {
-  background-color: var(--color-teal-6);
-}
-
-.gap-6 {
-  gap: 6vw;
-}
-
-.grid {
-  display: grid;
-}
-
-.grid-col-1 {
-  grid-template-columns: minmax(0, 1fr);
-}
-
-.grid-col-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-row-3 {
-  grid-template-rows: auto 1fr auto;
-}
-
-.hidden {
-  display: none;
-}
-
-.m-6 {
-  margin: 6vw;
-}
-
-.max-w-50 {
-  max-width: 50%;
-}
-
-.mb-6 {
-  margin-bottom: 6vw;
-}
-
-.min-h-screen {
-  min-height: 100vh;
-}
-
-.mt-6 {
-  margin-top: 6vw;
-}
-
-.mx-6 {
-  margin-right: 6vw;
-  margin-left: 6vw;
-}
-
-.overflow-hidden {
-  overflow: hidden;
-}
-
-.p-6 {
-  padding: 6vw;
+:is(button, [type="text"], [type="email"], textarea) {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  color: inherit;
 }
 
 .sr-only {
@@ -413,38 +350,6 @@ button:focus {
   width: 1px;
   height: 1px;
   overflow: hidden;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-ellipsis {
-  text-overflow: ellipsis;
-}
-
-.text-h3 {
-  font-size: var(--h3);
-}
-
-.text-h5 {
-  font-size: var(--h5);
-}
-
-.text-teal-1 {
-  color: var(--color-teal-1);
-}
-
-.text-upper {
-  text-transform: uppercase;
-}
-
-.w-100 {
-  width: 100%;
-}
-
-.whitespace-nowrap {
-  white-space: nowrap;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -461,23 +366,6 @@ button:focus {
   html {
     line-height: 1.7;
   }
-
-  .sm-aspect-21-9 {
-    aspect-ratio: 21/9;
-  }
-
-  .sm-gap-2 {
-    gap: 2vw;
-  }
-
-  .sm-grid-col-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .sm-my-2 {
-    margin-top: 2vw;
-    margin-bottom: 2vw;
-  }
 }
 
 /* 960px */
@@ -493,46 +381,6 @@ button:focus {
 
   html {
     line-height: 1.8;
-  }
-
-  .md-bb-0 {
-    border-bottom: none;
-  }
-
-  .md-grid {
-    display: grid;
-  }
-
-  .md-grid-col-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .md-grid-col-4-auto {
-    grid-template-columns: repeat(4, minmax(0, auto));
-  }
-
-  .md-hidden {
-    display: none;
-  }
-
-  .md-hover-bb:hover {
-    border-bottom: 2px solid var(--color-teal-6);
-  }
-
-  .md-justify {
-    justify-content: end;
-  }
-
-  .md-max-w-50 {
-    max-width: 50%;
-  }
-
-  .md-ml-auto {
-    margin-left: auto;
-  }
-
-  .md-text-right {
-    text-align: right;
   }
 }
 
@@ -555,10 +403,6 @@ button:focus {
     font-size: 125%;
     line-height: 1.9;
   }
-
-  .lg-aspect-16-9 {
-    aspect-ratio: 16/9;
-  }
 }
 
 /* 1440px */
@@ -570,39 +414,5 @@ button:focus {
   html {
     font-size: 137.5%;
     line-height: 2;
-  }
-
-  .gap-6 {
-    gap: 115px;
-  }
-
-  .sm-gap-2 {
-    gap: 38px;
-  }
-
-  .m-6 {
-    margin: 115px;
-  }
-
-  .mb-6 {
-    margin-bottom: 115px;
-  }
-
-  .mt-6 {
-    margin-top: 115px;
-  }
-
-  .mx-6 {
-    margin-right: 115px;
-    margin-left: 115px;
-  }
-
-  .sm-my-2 {
-    margin-top: 38px;
-    margin-bottom: 38px;
-  }
-
-  .p-6 {
-    padding: 115px;
   }
 }
