--- a/styles/collections.module.css
+++ b/styles/collections.module.css
@@ -1,4 +1,5 @@
-.article {
+.article,
+.page {
   margin: 6vw;
 }
 
@@ -6,9 +7,21 @@
   text-align: center;
 }
 
+.page {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, auto));
+  gap: 6vw;
+  justify-content: center;
+}
+
+.page li:first-of-type a {
+  pointer-events: none;
+}
+
 /* 1920px */
 @media (min-width: 120em) {
-  .article {
+  .article,
+  .page {
     margin: 115px;
   }
 }
