--- a/styles/globals.css
+++ b/styles/globals.css
@@ -208,7 +208,7 @@
 html {
   box-sizing: border-box;
   font-size: 112.5%;
-  line-height: 1.5;
+  /* line-height: 1.5; */
   -moz-tab-size: 4;
     -o-tab-size: 4;
        tab-size: 4;
@@ -432,11 +432,11 @@ textarea {
 }
 
 /* 640px */
-@media (min-width: 40em) {
+/* @media (min-width: 40em) {
   html {
     line-height: 1.7;
   }
-}
+} */
 
 /* 960px */
 @media (min-width: 60em) {
@@ -449,9 +449,9 @@ textarea {
     --small: 0.8rem;
   }
 
-  html {
+  /* html {
     line-height: 1.8;
-  }
+  } */
 }
 
 /* 1024 */
@@ -471,7 +471,7 @@ textarea {
 
   html {
     font-size: 125%;
-    line-height: 1.9;
+    /* line-height: 1.9; */
   }
 }
 
@@ -483,6 +483,6 @@ textarea {
 @media (min-width: 120em) {
   html {
     font-size: 137.5%;
-    line-height: 2;
+    /* line-height: 2; */
   }
 }
