--- a/styles/globals.css
+++ b/styles/globals.css
@@ -160,12 +160,22 @@
   --color-pink-4: #d2008f;
   --color-pink-5: #790051;
   --color-pink-6: #4b0030;
-  --h1: 2.488rem;
-  --h2: 2.074rem;
-  --h3: 1.728rem;
-  --h4: 1.44rem;
-  --h5: 1.2rem;
-  --small: 0.833rem;
+  --space-3xs: clamp(0.31rem, calc(0.30rem + 0.06vw), 0.38rem);
+  --space-2xs: clamp(0.56rem, calc(0.54rem + 0.12vw), 0.69rem);
+  --space-xs: clamp(0.88rem, calc(0.85rem + 0.18vw), 1.06rem);
+  --space-s: clamp(1.13rem, calc(1.09rem + 0.24vw), 1.38rem);
+  --space-m: clamp(1.69rem, calc(1.63rem + 0.36vw), 2.06rem);
+  --space-l: clamp(2.25rem, calc(2.18rem + 0.48vw), 2.75rem);
+  --space-xl: clamp(3.38rem, calc(3.27rem + 0.71vw), 4.13rem);
+  --space-2xl: clamp(4.50rem, calc(4.36rem + 0.95vw), 5.50rem);
+  --space-3xl: clamp(6.75rem, calc(6.54rem + 1.43vw), 8.25rem);
+  --h1: clamp(2.8rem, calc(2.37rem + 2.85vw), 5.79rem);
+  --h2: clamp(2.33rem, calc(2.05rem + 1.91vw), 4.34rem);
+  --h3: clamp(1.94rem, calc(1.76rem + 1.25vw), 3.26rem);
+  --h4: clamp(1.62rem, calc(1.5rem + 0.78vw), 2.44rem);
+  --h5: clamp(1.35rem, calc(1.28rem + 0.46vw), 1.83rem);
+  --p: clamp(1.13rem, calc(1.09rem + 0.24vw), 1.38rem);
+  --small: clamp(0.94rem, calc(0.92rem + 0.09vw), 1.03rem);
   --head: "Viaoda Libre", "Viaoda Libre-fallback", serif;
   --body: "Nanum Myeongjo", "Nanum Myeongjo-fallback", serif;
 }
@@ -207,8 +217,7 @@
 
 html {
   box-sizing: border-box;
-  font-size: 112.5%;
-  /* line-height: 1.5; */
+  line-height: 1.5;
   -moz-tab-size: 4;
     -o-tab-size: 4;
        tab-size: 4;
@@ -267,14 +276,15 @@ body {
   max-width: 1920px;
   margin: 0 auto;
   font-family: var(--body);
+  font-size: var(--p);
   font-weight: 400;
   color: var(--color-teal-6);
   background-color: var(--color-teal-1);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 1s ease-out;
   text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  transition: all 1s ease-out;
   min-block-size: 100%;
 }
 
@@ -285,10 +295,7 @@ main {
 :where(h1, h2, h3, h4, h5) {
   font-family: var(--head);
   font-weight: 400;
-}
-
-:where(h1, h2, h3, h4, h5, p) {
-  overflow-wrap: break-word;
+  line-height: 1.3;
 }
 
 h1 {
@@ -432,26 +439,11 @@ textarea {
 }
 
 /* 640px */
-/* @media (min-width: 40em) {
-  html {
-    line-height: 1.7;
-  }
-} */
+@media (min-width: 40em) {
+}
 
 /* 960px */
 @media (min-width: 60em) {
-  :root {
-    --h1: 3.052rem;
-    --h2: 2.441rem;
-    --h3: 1.953rem;
-    --h4: 1.563rem;
-    --h5: 1.25rem;
-    --small: 0.8rem;
-  }
-
-  /* html {
-    line-height: 1.8;
-  } */
 }
 
 /* 1024 */
@@ -460,19 +452,6 @@ textarea {
 
 /* 1280px */
 @media (min-width: 80em) {
-  :root {
-    --h1: 4.209rem;
-    --h2: 3.157rem;
-    --h3: 2.369rem;
-    --h4: 1.777rem;
-    --h5: 1.333rem;
-    --small: 0.75rem;
-  }
-
-  html {
-    font-size: 125%;
-    /* line-height: 1.9; */
-  }
 }
 
 /* 1440px */
@@ -481,8 +460,4 @@ textarea {
 
 /* 1920px */
 @media (min-width: 120em) {
-  html {
-    font-size: 137.5%;
-    /* line-height: 2; */
-  }
 }
