--- a/styles/lost.module.css
+++ b/styles/lost.module.css
@@ -1,10 +1,25 @@
-.article {
-  margin: 6vw;
+.main {
+  align-self: center;
 }
 
-/* 1920px */
-@media (min-width: 120em) {
+.article {
+  margin: var(--space-s);
+}
+
+.article p {
+  max-width: 80ch;
+}
+
+/* 640px */
+@media (min-width: 40em) {
   .article {
-    margin: 115px;
+    margin: var(--space-l);
+  }
+}
+
+/* 960px */
+@media (min-width: 60em) {
+  .article {
+    margin: var(--space-xl);
   }
 }
