--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,229 +1,217 @@
 :root {
-  --gray-1: #fafafa;
-  --gray-2: #f5f5f5;
-  --gray-3: #f0f0f0;
-  --gray-4: #d9d9d9;
-  --gray-5: #bfbfbf;
-  --gray-6: #8c8c8c;
-  --gray-7: #595959;
-  --gray-8: #434343;
-  --gray-9: #262626;
-  --gray-10: #1f1f1f;
-  --gray-11: #141414;
+  --color-gray-1: hsl(194.33, 0%, 96.6%);
+  --color-gray-2: hsl(194.33, 0%, 88.76%);
+  --color-gray-3: hsl(194.33, 0%, 54.65%);
+  --color-gray-4: hsl(194.33, 0%, 43.69%);
+  --color-gray-5: hsl(194.33, 0%, 24.13%);
+  --color-gray-6: hsl(194.33, 0%, 13.15%);
 
-  --color-gray-1: #f6f6f6;
-  --color-gray-2: #e2e2e2;
-  --color-gray-3: #8b8b8b;
-  --color-gray-4: #6f6f6f;
-  --color-gray-5: #3e3e3e;
-  --color-gray-6: #222222;
+  --color-rose-1: hsl(346.07, 99.43%, 98.5%);
+  --color-rose-2: hsl(345.18, 99.96%, 93.2%);
+  --color-rose-3: hsl(334.81, 99.99%, 61.6%);
+  --color-rose-4: hsl(328.92, 99.98%, 42.97%);
+  --color-rose-5: hsl(330.17, 99.93%, 25.07%);
+  --color-rose-6: hsl(332.18, 99.94%, 14.98%);
 
-  --color-rose-1: #fff7f9;
-  --color-rose-2: #ffdce5;
-  --color-rose-3: #ff3b8d;
-  --color-rose-4: #db0072;
-  --color-rose-5: #800040;
-  --color-rose-6: #4c0023;
+  --color-raspberry-1: hsl(357.78, 99.6%, 98.53%);
+  --color-raspberry-2: hsl(357.11, 99.89%, 93.31%);
+  --color-raspberry-3: hsl(346.49, 100%, 62.87%);
+  --color-raspberry-4: hsl(338.06, 99.91%, 43.59%);
+  --color-raspberry-5: hsl(339.67, 99.94%, 25.43%);
+  --color-raspberry-6: hsl(341.96, 99.97%, 15.97%);
 
-  --color-raspberry-1: #fff8f8;
-  --color-raspberry-2: #ffdddf;
-  --color-raspberry-3: #ff426c;
-  --color-raspberry-4: #de0051;
-  --color-raspberry-5: #82002c;
-  --color-raspberry-6: #510018;
+  --color-red-1: hsl(8.36, 99.84%, 98.32%);
+  --color-red-2: hsl(8.16, 99.91%, 92.38%);
+  --color-red-3: hsl(359.7, 100%, 63.73%);
+  --color-red-4: hsl(348.63, 99.98%, 44%);
+  --color-red-5: hsl(350.67, 99.96%, 25.69%);
+  --color-red-6: hsl(357.65, 99.99%, 16.18%);
 
-  --color-red-1: #fff8f6;
-  --color-red-2: #ffddd8;
-  --color-red-3: #ff4647;
-  --color-red-4: #e0002b;
-  --color-red-5: #830014;
-  --color-red-6: #530003;
+  --color-orange-1: hsl(17.05, 99.76%, 98.01%);
+  --color-orange-2: hsl(17.3, 99.97%, 90.92%);
+  --color-orange-3: hsl(18.2, 99.99%, 49.52%);
+  --color-orange-4: hsl(17.68, 99.98%, 40.12%);
+  --color-orange-5: hsl(17.02, 99.98%, 23.02%);
+  --color-orange-6: hsl(20.77, 99.94%, 12.58%);
 
-  --color-orange-1: #fff8f5;
-  --color-orange-2: #ffded1;
-  --color-orange-3: #fd4d00;
-  --color-orange-4: #cd3c00;
-  --color-orange-5: #752100;
-  --color-orange-6: #401600;
+  --color-cinnamon-1: hsl(25.29, 99.95%, 97.6%);
+  --color-cinnamon-2: hsl(26.05, 99.98%, 88.85%);
+  --color-cinnamon-3: hsl(32.37, 99.98%, 41.74%);
+  --color-cinnamon-4: hsl(31.96, 99.97%, 33.74%);
+  --color-cinnamon-5: hsl(30.71, 100%, 19.36%);
+  --color-cinnamon-6: hsl(31.7, 99.96%, 10.77%);
 
-  --color-cinnamon-1: #fff8f3;
-  --color-cinnamon-2: #ffdfc6;
-  --color-cinnamon-3: #d57300;
-  --color-cinnamon-4: #ac5c00;
-  --color-cinnamon-5: #633300;
-  --color-cinnamon-6: #371d00;
+  --color-amber-1: hsl(34.3, 99.88%, 96.9%);
+  --color-amber-2: hsl(35.9, 100%, 84.95%);
+  --color-amber-3: hsl(42.6, 99.96%, 36.2%);
+  --color-amber-4: hsl(42.28, 99.99%, 28.57%);
+  --color-amber-5: hsl(41.2, 99.94%, 16.09%);
+  --color-amber-6: hsl(41.07, 99.98%, 9.38%);
 
-  --color-amber-1: #fff8ef;
-  --color-amber-2: #ffe0b2;
-  --color-amber-3: #b98300;
-  --color-amber-4: #926700;
-  --color-amber-5: #523800;
-  --color-amber-6: #302100;
+  --color-yellow-1: hsl(46, 99.99%, 94.95%);
+  --color-yellow-2: hsl(51.81, 100%, 62.08%);
+  --color-yellow-3: hsl(53.34, 99.93%, 30.68%);
+  --color-yellow-4: hsl(53.2, 99.99%, 24.58%);
+  --color-yellow-5: hsl(52.64, 99.98%, 13.72%);
+  --color-yellow-6: hsl(51.45, 99.93%, 8.1%);
 
-  --color-yellow-1: #fff9e5;
-  --color-yellow-2: #ffe53e;
-  --color-yellow-3: #9c8b00;
-  --color-yellow-4: #7d6f00;
-  --color-yellow-5: #463d00;
-  --color-yellow-6: #292300;
+  --color-lime-1: hsl(65.62, 100%, 83.69%);
+  --color-lime-2: hsl(67.06, 99.99%, 47.44%);
+  --color-lime-3: hsl(67.31, 99.91%, 28.91%);
+  --color-lime-4: hsl(67.47, 99.96%, 23.14%);
+  --color-lime-5: hsl(67.99, 99.92%, 12.84%);
+  --color-lime-6: hsl(65.61, 99.97%, 7.39%);
 
-  --color-lime-1: #f7ffac;
-  --color-lime-2: #d5f200;
-  --color-lime-3: #819300;
-  --color-lime-4: #677600;
-  --color-lime-5: #394100;
-  --color-lime-6: #222600;
+  --color-chartreuse-1: hsl(85.69, 99.99%, 88.16%);
+  --color-chartreuse-2: hsl(83.69, 99.96%, 49.28%);
+  --color-chartreuse-3: hsl(84.47, 99.98%, 30.44%);
+  --color-chartreuse-4: hsl(84.97, 99.96%, 24.4%);
+  --color-chartreuse-5: hsl(86.81, 99.97%, 13.6%);
+  --color-chartreuse-6: hsl(82.22, 99.9%, 7.37%);
 
-  --color-chartreuse-1: #e5ffc3;
-  --color-chartreuse-2: #98fb00;
-  --color-chartreuse-3: #5c9b00;
-  --color-chartreuse-4: #497c00;
-  --color-chartreuse-5: #264500;
-  --color-chartreuse-6: #182600;
+  --color-green-1: hsl(109.97, 99.98%, 92.62%);
+  --color-green-2: hsl(117.73, 100%, 71.17%);
+  --color-green-3: hsl(131.49, 99.86%, 31.77%);
+  --color-green-4: hsl(130.54, 99.9%, 25.48%);
+  --color-green-5: hsl(126.84, 99.95%, 14.25%);
+  --color-green-6: hsl(110.87, 99.97%, 7.84%);
 
-  --color-green-1: #e0ffd9;
-  --color-green-2: #72ff6c;
-  --color-green-3: #00a21f;
-  --color-green-4: #008217;
-  --color-green-5: #004908;
-  --color-green-6: #062800;
+  --color-emerald-1: hsl(136.97, 99.98%, 93.17%);
+  --color-emerald-2: hsl(145.53, 99.99%, 68.22%);
+  --color-emerald-3: hsl(153.53, 99.82%, 31.48%);
+  --color-emerald-4: hsl(153.03, 99.98%, 25.22%);
+  --color-emerald-5: hsl(150.93, 99.9%, 14.11%);
+  --color-emerald-6: hsl(146.95, 99.88%, 7.86%);
 
-  --color-emerald-1: #dcffe6;
-  --color-emerald-2: #5dffa2;
-  --color-emerald-3: #00a05a;
-  --color-emerald-4: #008147;
-  --color-emerald-5: #004825;
-  --color-emerald-6: #002812;
+  --color-aquamarine-1: hsl(154.47, 99.98%, 92.65%);
+  --color-aquamarine-2: hsl(161.94, 100%, 62.84%);
+  --color-aquamarine-3: hsl(165.15, 99.85%, 31.18%);
+  --color-aquamarine-4: hsl(164.85, 99.87%, 25%);
+  --color-aquamarine-5: hsl(163.67, 99.87%, 13.96%);
+  --color-aquamarine-6: hsl(161.53, 99.95%, 7.77%);
 
-  --color-aquamarine-1: #daffef;
-  --color-aquamarine-2: #42ffc6;
-  --color-aquamarine-3: #009f78;
-  --color-aquamarine-4: #007f5f;
-  --color-aquamarine-5: #004734;
-  --color-aquamarine-6: #00281b;
+  --color-teal-1: hsl(167.47, 100%, 92.17%);
+  --color-teal-2: hsl(173.64, 99.94%, 49.99%);
+  --color-teal-3: hsl(173.43, 99.95%, 30.9%);
+  --color-teal-4: hsl(173.28, 99.82%, 24.24%);
+  --color-teal-5: hsl(172.72, 99.88%, 13.34%);
+  --color-teal-6: hsl(171.81, 99.98%, 7.68%);
 
-  --color-teal-1: #d7fff7;
-  --color-teal-2: #00ffe4;
-  --color-teal-3: #009e8c;
-  --color-teal-4: #007c6e;
-  --color-teal-5: #00443c;
-  --color-teal-6: #002722;
+  --color-cyan-1: hsl(178.99, 99.99%, 88.47%);
+  --color-cyan-2: hsl(180.23, 99.9%, 49.17%);
+  --color-cyan-3: hsl(180.23, 100%, 30.19%);
+  --color-cyan-4: hsl(180.24, 99.87%, 24.13%);
+  --color-cyan-5: hsl(180.26, 99.82%, 13.28%);
+  --color-cyan-6: hsl(180.3, 99.96%, 7.2%);
 
-  --color-cyan-1: #c4fffe;
-  --color-cyan-2: #00fafb;
-  --color-cyan-3: #00999a;
-  --color-cyan-4: #007a7b;
-  --color-cyan-5: #004344;
-  --color-cyan-6: #002525;
+  --color-powder-1: hsl(188.47, 99.97%, 92.71%);
+  --color-powder-2: hsl(188.15, 99.99%, 77.65%);
+  --color-powder-3: hsl(185.92, 99.91%, 33.09%);
+  --color-powder-4: hsl(186.04, 99.81%, 26.49%);
+  --color-powder-5: hsl(186.53, 99.89%, 14.15%);
+  --color-powder-6: hsl(187.45, 99.81%, 7.59%);
 
-  --color-powder-1: #dafaff;
-  --color-powder-2: #8df0ff;
-  --color-powder-3: #0098a9;
-  --color-powder-4: #007987;
-  --color-powder-5: #004048;
-  --color-powder-6: #002227;
+  --color-sky-1: hsl(196.72, 99.94%, 94.54%);
+  --color-sky-2: hsl(195.99, 99.97%, 84.14%);
+  --color-sky-3: hsl(190.84, 99.77%, 35.38%);
+  --color-sky-4: hsl(191.03, 99.95%, 28.22%);
+  --color-sky-5: hsl(191.83, 99.82%, 15.53%);
+  --color-sky-6: hsl(193.54, 99.91%, 7.91%);
 
-  --color-sky-1: #e3f7ff;
-  --color-sky-2: #aee9ff;
-  --color-sky-3: #0094b4;
-  --color-sky-4: #007590;
-  --color-sky-5: #00404f;
-  --color-sky-6: #001f28;
+  --color-cerulean-1: hsl(204.68, 99.99%, 95.59%);
+  --color-cerulean-2: hsl(203.62, 100%, 86.22%);
+  --color-cerulean-3: hsl(195.6, 99.93%, 38.63%);
+  --color-cerulean-4: hsl(195.86, 99.98%, 30.88%);
+  --color-cerulean-5: hsl(197, 99.88%, 16.48%);
+  --color-cerulean-6: hsl(199.33, 99.94%, 8.26%);
 
-  --color-cerulean-1: #e8f6ff;
-  --color-cerulean-2: #b9e3ff;
-  --color-cerulean-3: #0092c5;
-  --color-cerulean-4: #00749d;
-  --color-cerulean-5: #003c54;
-  --color-cerulean-6: #001d2a;
+  --color-azure-1: hsl(213.32, 99.82%, 95.42%);
+  --color-azure-2: hsl(212.28, 100%, 88.74%);
+  --color-azure-3: hsl(200.83, 99.92%, 42.9%);
+  --color-azure-4: hsl(201.14, 99.97%, 34.34%);
+  --color-azure-5: hsl(202.49, 99.9%, 18.46%);
+  --color-azure-6: hsl(205.29, 99.95%, 9.41%);
 
-  --color-azure-1: #e8f2ff;
-  --color-azure-2: #c6e0ff;
-  --color-azure-3: #008fdb;
-  --color-azure-4: #0071af;
-  --color-azure-5: #003b5e;
-  --color-azure-6: #001c30;
+  --color-blue-1: hsl(224.63, 99.87%, 97%);
+  --color-blue-2: hsl(223.56, 99.9%, 91.61%);
+  --color-blue-3: hsl(207.29, 99.89%, 49.39%);
+  --color-blue-4: hsl(207.65, 99.86%, 39.64%);
+  --color-blue-5: hsl(209.15, 99.94%, 21.47%);
+  --color-blue-6: hsl(212.22, 99.94%, 11.14%);
 
-  --color-blue-1: #f0f4ff;
-  --color-blue-2: #d4e0ff;
-  --color-blue-3: #0089fc;
-  --color-blue-4: #006dca;
-  --color-blue-5: #00386d;
-  --color-blue-6: #001a39;
+  --color-indigo-1: hsl(241.96, 99.87%, 97.56%);
+  --color-indigo-2: hsl(240.84, 99.96%, 93.36%);
+  --color-indigo-3: hsl(230.37, 99.99%, 69.86%);
+  --color-indigo-4: hsl(216.87, 99.99%, 49.48%);
+  --color-indigo-5: hsl(218.47, 99.95%, 27.11%);
+  --color-indigo-6: hsl(221.61, 99.97%, 14.38%);
 
-  --color-indigo-1: #f3f3ff;
-  --color-indigo-2: #deddff;
-  --color-indigo-3: #657eff;
-  --color-indigo-4: #0061fc;
-  --color-indigo-5: #00328a;
-  --color-indigo-6: #001649;
+  --color-violet-1: hsl(263.85, 99.96%, 97.33%);
+  --color-violet-2: hsl(263.17, 99.9%, 92.69%);
+  --color-violet-3: hsl(258.3, 100%, 71.89%);
+  --color-violet-4: hsl(255.43, 99.99%, 64.59%);
+  --color-violet-5: hsl(250.39, 85.77%, 40.42%);
+  --color-violet-6: hsl(245.8, 100%, 22.66%);
 
-  --color-violet-1: #f7f1ff;
-  --color-violet-2: #e8daff;
-  --color-violet-3: #9b70ff;
-  --color-violet-4: #794aff;
-  --color-violet-5: #2d0fbf;
-  --color-violet-6: #0b0074;
+  --color-purple-1: hsl(288.22, 99.8%, 97.75%);
+  --color-purple-2: hsl(287.36, 99.93%, 92.48%);
+  --color-purple-3: hsl(284.08, 100%, 65.71%);
+  --color-purple-4: hsl(284.55, 77.53%, 50.42%);
+  --color-purple-5: hsl(285.23, 99.99%, 26.48%);
+  --color-purple-6: hsl(284.23, 99.98%, 15.4%);
 
-  --color-purple-1: #fdf4ff;
-  --color-purple-2: #f7d9ff;
-  --color-purple-3: #d150ff;
-  --color-purple-4: #b01fe3;
-  --color-purple-5: #660087;
-  --color-purple-6: #3a004f;
+  --color-magenta-1: hsl(314.96, 99.99%, 97.66%);
+  --color-magenta-2: hsl(313.78, 99.95%, 92.07%);
+  --color-magenta-3: hsl(306.28, 94.77%, 52.17%);
+  --color-magenta-4: hsl(305.92, 99.95%, 39.66%);
+  --color-magenta-5: hsl(306.21, 99.97%, 22.8%);
+  --color-magenta-6: hsl(306.68, 99.94%, 13.33%);
 
-  --color-magenta-1: #fff3fc;
-  --color-magenta-2: #ffd7f6;
-  --color-magenta-3: #f911e0;
-  --color-magenta-4: #ca00b6;
-  --color-magenta-5: #740068;
-  --color-magenta-6: #44003c;
+  --color-pink-1: hsl(332.82, 99.54%, 98.48%);
+  --color-pink-2: hsl(331.79, 99.98%, 93.07%);
+  --color-pink-3: hsl(322.24, 100%, 59.31%);
+  --color-pink-4: hsl(319.09, 99.94%, 41.2%);
+  --color-pink-5: hsl(319.97, 99.95%, 23.72%);
+  --color-pink-6: hsl(321.26, 99.94%, 14.63%);
 
-  --color-pink-1: #fff7fb;
-  --color-pink-2: #ffdcec;
-  --color-pink-3: #ff2fb2;
-  --color-pink-4: #d2008f;
-  --color-pink-5: #790051;
-  --color-pink-6: #4b0030;
-
-  --space-3xs: clamp(0.31rem, calc(0.30rem + 0.06vw), 0.38rem);
+  --space-3xs: clamp(0.31rem, calc(0.3rem + 0.06vw), 0.38rem);
   --space-2xs: clamp(0.56rem, calc(0.54rem + 0.12vw), 0.69rem);
   --space-xs: clamp(0.88rem, calc(0.85rem + 0.18vw), 1.06rem);
   --space-s: clamp(1.13rem, calc(1.09rem + 0.24vw), 1.38rem);
   --space-m: clamp(1.69rem, calc(1.63rem + 0.36vw), 2.06rem);
   --space-l: clamp(2.25rem, calc(2.18rem + 0.48vw), 2.75rem);
   --space-xl: clamp(3.38rem, calc(3.27rem + 0.71vw), 4.13rem);
-  --space-2xl: clamp(4.50rem, calc(4.36rem + 0.95vw), 5.50rem);
+  --space-2xl: clamp(4.5rem, calc(4.36rem + 0.95vw), 5.5rem);
   --space-3xl: clamp(6.75rem, calc(6.54rem + 1.43vw), 8.25rem);
 
   --space-3xs-2xs: clamp(0.31rem, calc(0.26rem + 0.36vw), 0.69rem);
   --space-2xs-xs: clamp(0.56rem, calc(0.49rem + 0.48vw), 1.06rem);
-  --space-xs-s: clamp(0.88rem, calc(0.80rem + 0.48vw), 1.38rem);
+  --space-xs-s: clamp(0.88rem, calc(0.8rem + 0.48vw), 1.38rem);
   --space-s-m: clamp(1.13rem, calc(0.99rem + 0.89vw), 2.06rem);
   --space-m-l: clamp(1.69rem, calc(1.54rem + 1.01vw), 2.75rem);
   --space-l-xl: clamp(2.25rem, calc(1.98rem + 1.79vw), 4.13rem);
-  --space-xl-2xl: clamp(3.38rem, calc(3.07rem + 2.02vw), 5.50rem);
-  --space-2xl-3xl: clamp(4.50rem, calc(3.96rem + 3.57vw), 8.25rem);
+  --space-xl-2xl: clamp(3.38rem, calc(3.07rem + 2.02vw), 5.5rem);
+  --space-2xl-3xl: clamp(4.5rem, calc(3.96rem + 3.57vw), 8.25rem);
 
   --space-3xs-xs: clamp(0.31rem, calc(0.21rem + 0.71vw), 1.06rem);
   --space-2xs-s: clamp(0.56rem, calc(0.45rem + 0.77vw), 1.38rem);
   --space-xs-m: clamp(0.88rem, calc(0.71rem + 1.13vw), 2.06rem);
   --space-s-l: clamp(1.13rem, calc(0.89rem + 1.55vw), 2.75rem);
   --space-m-xl: clamp(1.69rem, calc(1.34rem + 2.32vw), 4.13rem);
-  --space-l-2xl: clamp(2.25rem, calc(1.79rem + 3.10vw), 5.50rem);
+  --space-l-2xl: clamp(2.25rem, calc(1.79rem + 3.1vw), 5.5rem);
   --space-xl-3xl: clamp(3.38rem, calc(2.68rem + 4.64vw), 8.25rem);
 
   --space-3xs-s: clamp(0.31rem, calc(0.16rem + 1.01vw), 1.38rem);
   --space-2xs-m: clamp(0.56rem, calc(0.35rem + 1.43vw), 2.06rem);
   --space-xs-l: clamp(0.88rem, calc(0.61rem + 1.79vw), 2.75rem);
-  --space-s-xl: clamp(1.13rem, calc(0.70rem + 2.86vw), 4.13rem);
-  --space-m-2xl: clamp(1.69rem, calc(1.14rem + 3.63vw), 5.50rem);
+  --space-s-xl: clamp(1.13rem, calc(0.7rem + 2.86vw), 4.13rem);
+  --space-m-2xl: clamp(1.69rem, calc(1.14rem + 3.63vw), 5.5rem);
   --space-l-3xl: clamp(2.25rem, calc(1.39rem + 5.71vw), 8.25rem);
 
   --space-3xs-m: clamp(0.31rem, calc(0.06rem + 1.67vw), 2.06rem);
   --space-2xs-l: clamp(0.56rem, calc(0.25rem + 2.08vw), 2.75rem);
-  --space-xs-xl: clamp(0.88rem, calc(0.41rem + 3.10vw), 4.13rem);
-  --space-s-2xl: clamp(1.13rem, calc(0.50rem + 4.17vw), 5.50rem);
+  --space-xs-xl: clamp(0.88rem, calc(0.41rem + 3.1vw), 4.13rem);
+  --space-s-2xl: clamp(1.13rem, calc(0.5rem + 4.17vw), 5.5rem);
   --space-m-3xl: clamp(1.69rem, calc(0.75rem + 6.25vw), 8.25rem);
 
   --h1: clamp(2.8rem, calc(2.37rem + 2.85vw), 5.79rem);
