--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -3,7 +3,7 @@
 }
 
 .nav {
-  margin: var(--space-s);
+  margin: var(--space-s) var(--space-s-xl);
 }
 
 .mobile {
@@ -25,19 +25,8 @@
   display: none;
 }
 
-/* 640px */
-@media (min-width: 40em) {
-  .nav {
-    margin: var(--space-s) var(--space-l);
-  }
-}
-
 /* 960px */
 @media (min-width: 60em) {
-  .nav {
-    margin: var(--space-s) var(--space-xl);
-  }
-
   .nav button {
     display: none;
   }
